# axum_clean

./: .envrc  Cargo.toml  readme.org
.config/bacon/: prefs.toml
docs/: 001-dynamic_field_authorization.org  002-dynamic_field_authorization_integration.org  003-a-dynamic-authorization-architecture.org  004-policy-driven-architecture.org  005-interaction-graph-architecture.org  infrastructure.org
notes/: application.org  diagrams.org  diff.org  doamin.dot  domain_trait_and_remapping.org  environment_domain.org  events_logs.org  infrastructure-old..org  interface.org  new_application.org  new_changes_21_4.org  new_domain.org  policy.org  policy_code.org  query.org  serialize.org
