[workspace]
members = [
    "packages/domain",
    "packages/application",
    "packages/infrastructure",
    "packages/api"
]
resolver = "3"

[workspace.dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
uuid = { version = "1", features = ["v4"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
chrono = "0.4.42"
url = "2.5.7"
